# Product_Recommendation_Bot

./: main.py  pyproject.toml  requirements.txt  streamlit_gui.py
app/: schema.py
keys/: secret_key.py
notebook/: 01_testing.ipynb  Testing testing testing testing.txt  licenses.py
util/: langchain_helper.py
